--- a/source/.header.html
+++ b/source/.header.html
@@ -1,7 +1,7 @@
 <hr/>
 <nav>
-<a href="/">home</a>
-<a href="/blog">blog</a>
-<a href="https://github.com/zamlz">git</a>
+<a href="/">Home</a>
+<a href="/blog">Blog</a>
+<a href="https://github.com/zamlz">Git</a>
 </nav>
 <hr/>
