Fixed link colors

--- a/source/.header.html
+++ b/source/.header.html
@@ -1,7 +1,10 @@
 <hr/>
-<nav>
-<a href="/">Home</a>
-<a href="/blog">Blog</a>
-<a href="https://github.com/zamlz">Git</a>
-</nav>
+  <strong>
+  <nav>
+    <a href="/">Home</a>
+    <a href="/blog">Blog</a>
+    <a href="https://github.com/zamlz">Git</a>
+    <a href-"/contact">Contact</a>
+  </nav>
+  </strong>
 <hr/>
