--- a/source/.header.html
+++ b/source/.header.html
@@ -4,7 +4,7 @@
     <a href="/">Home</a>
     <a href="/blog">Blog</a>
     <a href="https://github.com/zamlz">Git</a>
-    <a href-"/contact">Contact</a>
+    <a href="/contact">Contact</a>
   </nav>
   </strong>
 <hr/>
