Really made the website colorful

--- a/source/.header.html
+++ b/source/.header.html
@@ -1,10 +1,8 @@
 <hr/>
-  <strong>
   <nav>
-    <a href="/">Home</a>
-    <a href="/blog">Blog</a>
-    <a href="https://github.com/zamlz">Git</a>
-    <a href="/contact">Contact</a>
+    <a href="/">home</a>
+    <a href="/blog">blog</a>
+    <a href="https://github.com/zamlz">git</a>
+    <a href="/contact">contact</a>
   </nav>
-  </strong>
 <hr/>
