--- a/source/.header.html
+++ b/source/.header.html
@@ -2,7 +2,7 @@
   <nav>
     <a href="/">home</a>
     <a href="/blog">blog</a>
-    <a href="https://github.com/zamlz">git</a>
+    <a href="https://gitlab.com/zamlz">git</a>
     <a href="/contact">contact</a>
   </nav>
 <hr/>
