--- a/source/.template.html
+++ b/source/.template.html
@@ -44,10 +44,7 @@ $if(subtitle)$
 <h1 class="subtitle">$subtitle$</h1>
 $endif$
 $for(author)$
-<h2 class="author">$author$</h2>
-$endfor$
-$if(date)$
-<h3 class="date">$date$</h3>
+<h2 class="author-date">$author$ $endfor$ $if(date)$ - $date$</h2>
 $endif$
 </div>
 $endif$
