Major CSS rework

--- a/source/.header.html
+++ b/source/.header.html
@@ -1,9 +1,1 @@
-<hr/>
-  <nav>
-    <a href="/">HOME</a>
-    <a href="/blog">BLOG</a>
-    <a href="https://github.com/zamlz">GIT</a>
-    <a href="/contact">CONTACT</a>
-  </nav>
-<hr/>
-<div id="inner-content">
+<div style="padding: 10px;">
