--- a/source/.template.html
+++ b/source/.template.html
@@ -34,28 +34,51 @@ $for(header-includes)$
 $endfor$
 </head>
 <body>
+
+    <div style="border-bottom: solid thin #888; padding: 10px;">
+        <div style="float: left; padding-top: 10px; padding-bottom: 10px;">
+
+            $if(title)$
+                <p class="name">$title$</p>
+                $if(subtitle)$
+                    <p class="heading">$subtitle$</p>
+                $endif$
+                <!--
+                $for(author)$
+                    <h2 class="author">$author$</h2>
+                $endfor$
+                -->
+            $endif$
+
+            <p class="heading">
+                <a href="/">about</a> |
+                <a href="/blog">blog</a> |
+                <a href="https://github.com/zamlz/">git</a>
+            </p>
+
+        </div>
+        <br clear="all"/>
+    </div>
+
 $for(include-before)$
-$include-before$
+    $include-before$
 $endfor$
-$if(title)$
-<div id="$idprefix$header">
-<h1 class="title">$title$</h1>
-$if(subtitle)$
-<h1 class="subtitle">$subtitle$</h1>
+
+$if(date)$
+    <h3>[$date$]</h3>
 $endif$
-$for(author)$
-<h2 class="author-date">$author$ $endfor$ $if(date)$ - $date$</h2>
-$endif$
-</div>
-$endif$
+
 $if(toc)$
-<div id="$idprefix$TOC">
-$toc$
-</div>
+    <div id="$idprefix$TOC">
+        $toc$
+    </div>
 $endif$
+
 $body$
+
 $for(include-after)$
-$include-after$
+    $include-after$
 $endfor$
+
 </body>
 </html>
