Fixed some css styling

--- a/source/.template.html
+++ b/source/.template.html
@@ -36,7 +36,7 @@ $endfor$
 <body>
 
     <div style="border-bottom: solid thin #888; padding: 10px;">
-        <div style="float: left; padding-top: 10px; padding-bottom: 10px;">
+        <div style="padding-top: 10px; padding-bottom: 10px;">
 
             $if(title)$
                 <p class="name">$title$</p>
@@ -55,7 +55,6 @@ $endfor$
                 <a href="/blog">blog</a> |
                 <a href="https://github.com/zamlz/">git</a>
             </p>
-
         </div>
         <br clear="all"/>
     </div>
