--- a/source/.template.html
+++ b/source/.template.html
@@ -52,7 +52,7 @@ $endfor$
 
             <p class="heading">
                 <a href="/">about</a> |
-                <a href="/blog">blog</a> |
+                <a href="/blog/posts.html">blog</a> |
                 <a href="https://github.com/zamlz/">git</a>
             </p>
         </div>
@@ -62,6 +62,8 @@ $endfor$
 $for(include-before)$
     $include-before$
 $endfor$
+
+<div style="padding: 10px;">
 
 $if(date)$
     <h3>[$date$]</h3>
@@ -74,6 +76,8 @@ $if(toc)$
 $endif$
 
 $body$
+
+</div>
 
 $for(include-after)$
     $include-after$
