Added more links

--- a/source/.template.html
+++ b/source/.template.html
@@ -53,7 +53,8 @@ $endfor$
             <p class="heading">
                 <a href="/">about</a> |
                 <a href="/blog/posts.html">blog</a> |
-                <a href="https://github.com/zamlz/">git</a>
+                <a href="https://git.zamlz.org">cgit</a> |
+                <a href="https://github.com/zamlz/">github</a>
             </p>
         </div>
         <br clear="all"/>
