--- a/source/.template.html
+++ b/source/.template.html
@@ -51,8 +51,8 @@ $endfor$
             $endif$
 
             <p class="heading">
-                <a href="/">about</a> |
-                <a href="/blog/posts.html">blog</a> |
+                <a href="https://zamlz.org">about</a> |
+                <a href="https://blog.zamlz.org">blog</a> |
                 <a href="https://git.zamlz.org">cgit</a> |
                 <a href="https://github.com/zamlz/">github</a>
             </p>
