Updated headers for better local testing

--- a/source/.template.html
+++ b/source/.template.html
@@ -52,7 +52,7 @@ $endfor$
 
             <p class="heading">
                 <a href="https://zamlz.org">about</a> |
-                <a href="https://blog.zamlz.org">blog</a> |
+                <a href="/blog/posts.html">blog</a> |
                 <a href="https://git.zamlz.org">cgit</a> |
                 <a href="https://github.com/zamlz/">github</a>
             </p>
