--- a/resources/template.html
+++ b/resources/template.html
@@ -58,7 +58,7 @@ crossorigin="anonymous">
 
             <p class="heading">
                 <a href="https://zamlz.org">about</a> |
-                <a href="/blog/posts.html">blog</a> |
+                <a href="https://blog.zamlz.org">blog</a> |
                 <a href="https://git.zamlz.org">cgit</a> |
                 <a href="https://github.com/zamlz/">github</a>
             </p>
