Added third subwebsite

--- a/resources/template.html
+++ b/resources/template.html
@@ -59,6 +59,7 @@ crossorigin="anonymous">
             <p class="heading">
                 <a href="https://zamlz.org">about</a> |
                 <a href="https://blog.zamlz.org">blog</a> |
+                <a href="https://notes.zamlz.org">notes</a> |
                 <a href="https://git.zamlz.org">cgit</a> |
                 <a href="https://github.com/zamlz/">github</a>
             </p>
