Changed styling of my website

--- a/resources/template.html
+++ b/resources/template.html
@@ -33,6 +33,7 @@ $for(header-includes)$
   $header-includes$
 $endfor$
 
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
 integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
 crossorigin="anonymous">
