--- a/resources/template.html
+++ b/resources/template.html
@@ -23,6 +23,7 @@ $if(highlighting-css)$
 $highlighting-css$
   </style>
 $endif$
+  <link rel="stylesheet" href="/resources/default.css" type="text/css" />
 $for(css)$
   <link rel="stylesheet" href="$css$" type="text/css" />
 $endfor$
@@ -60,7 +61,7 @@ crossorigin="anonymous">
             <p class="heading">
                 <a href="https://zamlz.org">about</a> |
                 <a href="https://blog.zamlz.org">blog</a> |
-                <a href="https://notes.zamlz.org">notes</a> |
+                <a href="https://wiki.zamlz.org">wiki</a> |
                 <a href="https://github.com/zamlz/">github</a>
             </p>
         </div>
